--- a/vso/hcp-auth.yaml
+++ b/vso/hcp-auth.yaml
@@ -5,7 +5,7 @@ metadata:
   name: default
   namespace: vault-secrets-operator-system
 spec:
-  organizationID: f44344ba-1497-45ec-8e53-fa754661b8ea
-  projectID: 5c7ceebf-a4ea-4445-b172-9a6374627b41
+  organizationID: ORG_ID
+  projectID: PROJECT_ID
   servicePrincipal:
     secretRef: vso-demo-sp
