--- a/vso/hcp-auth.yaml
+++ b/vso/hcp-auth.yaml
@@ -5,7 +5,7 @@ metadata:
   name: default
   namespace: vault-secrets-operator-system
 spec:
-  organizationID: ORG_ID
-  projectID: PROJECT_ID
+  organizationID: {{ORG_ID}}
+  projectID: {{PROJECT_ID}}
   servicePrincipal:
     secretRef: vso-demo-sp
