--- a/vso/hvs-demo-app.yaml
+++ b/vso/hvs-demo-app.yaml
@@ -2,12 +2,12 @@ apiVersion: secrets.hashicorp.com/v1beta1
 kind: HCPVaultSecretsApp
 metadata:
   name: payments-api
-  namespace: uber-api-dev
+  namespace: default
 spec:
-  appName: {{HVS_APP_NAME}}
+  appName: payments-api
   destination:
     create: true
     labels:
       hvs: "true"
-    name: stripe-test-secret-key
+    name: payments-api-secrets
   refreshAfter: 1h
